--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
-        <img src="images/portfolio logo.svg" alt="portfolio logo">
+        <img src="images/portfoliologo.svg" alt="portfolio logo">
         <nav>
         <a href="#contact">Contact</a>
         <a href="#workexperience">Work Experience</a>
@@ -30,13 +39,13 @@
         </p>
         <p>
             UW-Eau Claire, Intern <br>
-            Academy of Lifelong Learners <br>
+            Academy for Lifelong Learners <br>
             October 2023-present
         </p>
     </section>
     <section class="about">
         <h2 id="about">About</h2>
-        <img src="images/PRSSA Headshots-72_Original.jpg" alt="Abby's headshot">
+        <img src="images/PRSSAHeadshots-72_Original.jpg" alt="Abby's headshot">
         <p>I am a junior at UW-Eau Claire, <br>
             I study Integrated Strategic <br>
             Communication with an Advertising <br>
